--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             </label>
 
             <ul class="menu">
-                <li class="nav-item"><a href="#"> About </a></li>
+                <li class="nav-item"><a href="https://business.quickteller.com/"> About </a></li>
                 <li class="nav-item"><a href="resources.html"> Webinar </a></li>
                 <li class="nav-item"><a href="resources.html"> E-book </a></li>
-                <li class="nav-item"><a href="resources.html"> Blog </a></li>
-                <li class="talk-btn nav-item"> <a href="contact.html"> Get Started </a></li>
+                <li class="nav-item"><a href="https://www.interswitchgroup.com/blog/home"> Blog </a></li>
+                <li class="talk-btn nav-item"> <a href="https://business.quickteller.com/"> Get Started </a></li>
                 <li class="nav-item flag"><a href="index.html"> <img src="images/Nigeria-flag.svg"> </a> </li>
                 <!-- <li class="nav-item"><i class="bi bi-search"></i></li> -->
             </ul>
@@ -56,7 +56,7 @@
                     We're your trusted business partners to accelerate your business growth with Quickteller Business Storefront, 
                     Multiple Payment Channels, Instant Payments, Point of Sale Terminal. 
                 </p>
-                <a class="learn-more-btn" href="">Learn more</a>
+                <a class="learn-more-btn" href="https://business.quickteller.com/">Learn more</a>
             </div>
         </div>
     </section>
@@ -273,7 +273,7 @@
                 </div>
 
                 <div class="pos-btn">
-                    <a href="" class="reserve-seat-btn">Get free POS </a>
+                    <a href="https://business.quickteller.com/pos-request" class="reserve-seat-btn">Get free POS </a>
                 </div>
             </div>
 
