--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>QT boost</title>
 
+    <link
+    rel="shortcut icon"
+    href="https://mufasa.interswitchng.com/p/favicons/favicon_isw.png"
+    type="image/png"
+  />
+
     <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
     " 
