--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                 </div>
                                 <div class="form-group">
                                     <span class="input_placeholder">Password <span class="required_symbol">*</span></span>
-                                    <input id="password" name="" class="form-control tel" type="text" value=""/>
+                                    <input id="password" name="" class="form-control tel" type="password" value=""/>
                                 </div>
                                 <div class="button-align">
                                     <button type="submit" id="download-pdf" class="reserve-seat-btn form-submit">Submit and Download</button>
